load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "i18n",
    srcs = [
        "alphaindex.cpp",
        "anytrans.cpp",
        "astro.cpp",
        "basictz.cpp",
        "bocsu.cpp",
        "brktrans.cpp",
        "buddhcal.cpp",
        "calendar.cpp",
        "casetrn.cpp",
        "cecal.cpp",
        "chnsecal.cpp",
        "choicfmt.cpp",
        "coleitr.cpp",
        "coll.cpp",
        "collation.cpp",
        "collationbuilder.cpp",
        "collationcompare.cpp",
        "collationdata.cpp",
        "collationdatabuilder.cpp",
        "collationdatareader.cpp",
        "collationdatawriter.cpp",
        "collationfastlatin.cpp",
        "collationfastlatinbuilder.cpp",
        "collationfcd.cpp",
        "collationiterator.cpp",
        "collationkeys.cpp",
        "collationroot.cpp",
        "collationrootelements.cpp",
        "collationruleparser.cpp",
        "collationsets.cpp",
        "collationsettings.cpp",
        "collationtailoring.cpp",
        "collationweights.cpp",
        "compactdecimalformat.cpp",
        "coptccal.cpp",
        "cpdtrans.cpp",
        "csdetect.cpp",
        "csmatch.cpp",
        "csr2022.cpp",
        "csrecog.cpp",
        "csrmbcs.cpp",
        "csrsbcs.cpp",
        "csrucode.cpp",
        "csrutf8.cpp",
        "curramt.cpp",
        "currfmt.cpp",
        "currpinf.cpp",
        "currunit.cpp",
        "dangical.cpp",
        "datefmt.cpp",
        "dayperiodrules.cpp",
        "dcfmtsym.cpp",
        "decContext.cpp",
        "decNumber.cpp",
        "decimfmt.cpp",
        "displayoptions.cpp",
        "double-conversion-bignum-dtoa.cpp",
        "double-conversion-bignum.cpp",
        "double-conversion-cached-powers.cpp",
        "double-conversion-double-to-string.cpp",
        "double-conversion-fast-dtoa.cpp",
        "double-conversion-string-to-double.cpp",
        "double-conversion-strtod.cpp",
        "dtfmtsym.cpp",
        "dtitvfmt.cpp",
        "dtitvinf.cpp",
        "dtptngen.cpp",
        "dtrule.cpp",
        "erarules.cpp",
        "esctrn.cpp",
        "ethpccal.cpp",
        "fmtable.cpp",
        "fmtable_cnv.cpp",
        "format.cpp",
        "formatted_string_builder.cpp",
        "formattedval_iterimpl.cpp",
        "formattedval_sbimpl.cpp",
        "formattedvalue.cpp",
        "fphdlimp.cpp",
        "fpositer.cpp",
        "funcrepl.cpp",
        "gender.cpp",
        "gregocal.cpp",
        "gregoimp.cpp",
        "hebrwcal.cpp",
        "indiancal.cpp",
        "inputext.cpp",
        "islamcal.cpp",
        "iso8601cal.cpp",
        "japancal.cpp",
        "listformatter.cpp",
        "measfmt.cpp",
        "measunit.cpp",
        "measunit_extra.cpp",
        "measure.cpp",
        "msgfmt.cpp",
        "messageformat2.cpp",
        "messageformat2_arguments.cpp",
        "messageformat2_checker.cpp",
        "messageformat2_data_model.cpp",
        "messageformat2_errors.cpp",
        "messageformat2_evaluation.cpp",
        "messageformat2_formatter.cpp",
        "messageformat2_formattable.cpp",
        "messageformat2_function_registry.cpp",
        "messageformat2_parser.cpp",
        "messageformat2_serializer.cpp",
        "name2uni.cpp",
        "nfrs.cpp",
        "nfrule.cpp",
        "nfsubs.cpp",
        "nortrans.cpp",
        "nultrans.cpp",
        "number_affixutils.cpp",
        "number_asformat.cpp",
        "number_capi.cpp",
        "number_compact.cpp",
        "number_currencysymbols.cpp",
        "number_decimalquantity.cpp",
        "number_decimfmtprops.cpp",
        "number_fluent.cpp",
        "number_formatimpl.cpp",
        "number_grouping.cpp",
        "number_integerwidth.cpp",
        "number_longnames.cpp",
        "number_mapper.cpp",
        "number_modifiers.cpp",
        "number_multiplier.cpp",
        "number_notation.cpp",
        "number_output.cpp",
        "number_padding.cpp",
        "number_patternmodifier.cpp",
        "number_patternstring.cpp",
        "number_rounding.cpp",
        "number_scientific.cpp",
        "number_simple.cpp",
        "number_skeletons.cpp",
        "number_symbolswrapper.cpp",
        "number_usageprefs.cpp",
        "number_utils.cpp",
        "numfmt.cpp",
        "numparse_affixes.cpp",
        "numparse_compositions.cpp",
        "numparse_currency.cpp",
        "numparse_decimal.cpp",
        "numparse_impl.cpp",
        "numparse_parsednumber.cpp",
        "numparse_scientific.cpp",
        "numparse_symbols.cpp",
        "numparse_validators.cpp",
        "numrange_capi.cpp",
        "numrange_fluent.cpp",
        "numrange_impl.cpp",
        "numsys.cpp",
        "olsontz.cpp",
        "persncal.cpp",
        "pluralranges.cpp",
        "plurfmt.cpp",
        "plurrule.cpp",
        "quant.cpp",
        "quantityformatter.cpp",
        "rbnf.cpp",
        "rbt.cpp",
        "rbt_data.cpp",
        "rbt_pars.cpp",
        "rbt_rule.cpp",
        "rbt_set.cpp",
        "rbtz.cpp",
        "regexcmp.cpp",
        "regeximp.cpp",
        "regexst.cpp",
        "regextxt.cpp",
        "region.cpp",
        "reldatefmt.cpp",
        "reldtfmt.cpp",
        "rematch.cpp",
        "remtrans.cpp",
        "repattrn.cpp",
        "rulebasedcollator.cpp",
        "scientificnumberformatter.cpp",
        "scriptset.cpp",
        "search.cpp",
        "selfmt.cpp",
        "sharedbreakiterator.cpp",
        "simpletz.cpp",
        "smpdtfmt.cpp",
        "smpdtfst.cpp",
        "sortkey.cpp",
        "standardplural.cpp",
        "string_segment.cpp",
        "strmatch.cpp",
        "strrepl.cpp",
        "stsearch.cpp",
        "taiwncal.cpp",
        "timezone.cpp",
        "titletrn.cpp",
        "tmunit.cpp",
        "tmutamt.cpp",
        "tmutfmt.cpp",
        "tolowtrn.cpp",
        "toupptrn.cpp",
        "translit.cpp",
        "transreg.cpp",
        "tridpars.cpp",
        "tzfmt.cpp",
        "tzgnames.cpp",
        "tznames.cpp",
        "tznames_impl.cpp",
        "tzrule.cpp",
        "tztrans.cpp",
        "ucal.cpp",
        "ucln_in.cpp",
        "ucol.cpp",
        "ucol_res.cpp",
        "ucol_sit.cpp",
        "ucoleitr.cpp",
        "ucsdet.cpp",
        "udat.cpp",
        "udateintervalformat.cpp",
        "udatpg.cpp",
        "ufieldpositer.cpp",
        "uitercollationiterator.cpp",
        "ulistformatter.cpp",
        "ulocdata.cpp",
        "umsg.cpp",
        "unesctrn.cpp",
        "uni2name.cpp",
        "units_data.cpp",
        "units_complexconverter.cpp",
        "units_converter.cpp",
        "units_router.cpp",
        "unum.cpp",
        "unumsys.cpp",
        "upluralrules.cpp",
        "uregex.cpp",
        "uregexc.cpp",
        "uregion.cpp",
        "usearch.cpp",
        "uspoof.cpp",
        "uspoof_build.cpp",
        "uspoof_conf.cpp",
        "uspoof_impl.cpp",
        "utf16collationiterator.cpp",
        "utf8collationiterator.cpp",
        "utmscale.cpp",
        "utrans.cpp",
        "vtzone.cpp",
        "vzone.cpp",
        "windtfmt.cpp",
        "winnmfmt.cpp",
        "wintzimpl.cpp",
        "zonemeta.cpp",
        "zrule.cpp",
        "ztrans.cpp"
    ],
    hdrs = [
        "unicode/tblcoll.h",
        "unicode/compactdecimalformat.h",
        "unicode/dtrule.h",
        "unicode/unumberformatter.h",
        "unicode/curramt.h",
        "unicode/plurfmt.h",
        "unicode/ucsdet.h",
        "unicode/umsg.h",
        "unicode/numfmt.h",
        "unicode/reldatefmt.h",
        "unicode/formattednumber.h",
        "unicode/formattedvalue.h",
        "unicode/measure.h",
        "unicode/uformattable.h",
        "unicode/vtzone.h",
        "unicode/rbnf.h",
        "unicode/uspoof.h",
        "unicode/unirepl.h",
        "unicode/datefmt.h",
        "unicode/basictz.h",
        "unicode/coll.h",
        "unicode/messageformat2_arguments.h",
        "unicode/nounit.h",
        "unicode/displayoptions.h",
        "unicode/format.h",
        "unicode/dtitvfmt.h",
        "unicode/uformattednumber.h",
        "unicode/udatpg.h",
        "unicode/smpdtfmt.h",
        "unicode/messageformat2_data_model_names.h",
        "unicode/tztrans.h",
        "unicode/simpletz.h",
        "unicode/unumberrangeformatter.h",
        "unicode/ucoleitr.h",
        "unicode/tmunit.h",
        "unicode/unum.h",
        "unicode/usimplenumberformatter.h",
        "unicode/ulocdata.h",
        "unicode/choicfmt.h",
        "unicode/selfmt.h",
        "unicode/dtfmtsym.h",
        "unicode/uregex.h",
        "unicode/tznames.h",
        "unicode/alphaindex.h",
        "unicode/currpinf.h",
        "unicode/dcfmtsym.h",
        "unicode/numberformatter.h",
        "unicode/ufieldpositer.h",
        "unicode/calendar.h",
        "unicode/ucal.h",
        "unicode/tmutfmt.h",
        "unicode/udat.h",
        "unicode/messageformat2_data_model.h",
        "unicode/udateintervalformat.h",
        "unicode/listformatter.h",
        "unicode/usearch.h",
        "unicode/translit.h",
        "unicode/messageformat2_function_registry.h",
        "unicode/numsys.h",
        "unicode/ugender.h",
        "unicode/sortkey.h",
        "unicode/ucol.h",
        "unicode/unumberoptions.h",
        "unicode/currunit.h",
        "unicode/tmutamt.h",
        "unicode/ulistformatter.h",
        "unicode/ureldatefmt.h",
        "unicode/coleitr.h",
        "unicode/uformattedvalue.h",
        "unicode/gregocal.h",
        "unicode/gender.h",
        "unicode/stsearch.h",
        "unicode/decimfmt.h",
        "unicode/search.h",
        "unicode/measunit.h",
        "unicode/numberrangeformatter.h",
        "unicode/upluralrules.h",
        "unicode/fpositer.h",
        "unicode/tzfmt.h",
        "unicode/unumsys.h",
        "unicode/dtitvinf.h",
        "unicode/measfmt.h",
        "unicode/dtptngen.h",
        "unicode/timezone.h",
        "unicode/region.h",
        "unicode/utmscale.h",
        "unicode/plurrule.h",
        "unicode/messageformat2_formattable.h",
        "unicode/regex.h",
        "unicode/msgfmt.h",
        "unicode/utrans.h",
        "unicode/scientificnumberformatter.h",
        "unicode/udisplayoptions.h",
        "unicode/fieldpos.h",
        "unicode/uregion.h",
        "unicode/rbtz.h",
        "unicode/simplenumberformatter.h",
        "unicode/fmtable.h",
        "unicode/messageformat2.h",
        "unicode/tzrule.h",
        "windtfmt.h",
        "double-conversion-diy-fp.h",
        "rbt.h",
        "collationcompare.h",
        "collationrootelements.h",
        "rbt_pars.h",
        "numparse_validators.h",
        "uitercollationiterator.h",
        "transreg.h",
        "toupptrn.h",
        "numparse_currency.h",
        "collationdatabuilder.h",
        "measunit_impl.h",
        "regexcmp.h",
        "number_mapper.h",
        "erarules.h",
        "number_microprops.h",
        "decNumber.h",
        "uspoof_conf.h",
        "plurrule_impl.h",
        "remtrans.h",
        "double-conversion-double-to-string.h",
        "casetrn.h",
        "wintzimpl.h",
        "tzgnames.h",
        "dayperiodrules.h",
        "double-conversion-fast-dtoa.h",
        "formattedval_impl.h",
        "decNumberLocal.h",
        "collationdata.h",
        "msgfmt_impl.h",
        "number_formatimpl.h",
        "name2uni.h",
        "number_decimalquantity.h",
        "messageformat2_macros.h",
        "number_asformat.h",
        "number_affixutils.h",
        "collationweights.h",
        "gregoimp.h",
        "double-conversion-bignum.h",
        "units_complexconverter.h",
        "unesctrn.h",
        "double-conversion-bignum-dtoa.h",
        "numrange_impl.h",
        "persncal.h",
        "csmatch.h",
        "csrecog.h",
        "collationtailoring.h",
        "nortrans.h",
        "numsys_impl.h",
        "numparse_decimal.h",
        "numparse_affixes.h",
        "olsontz.h",
        "scriptset.h",
        "number_multiplier.h",
        "number_scientific.h",
        "numparse_impl.h",
        "number_skeletons.h",
        "csrucode.h",
        "sharedbreakiterator.h",
        "buddhcal.h",
        "sharedpluralrules.h",
        "nultrans.h",
        "japancal.h",
        "dangical.h",
        "units_converter.h",
        "ucln_in.h",
        "collationfastlatinbuilder.h",
        "collationkeys.h",
        "double-conversion-strtod.h",
        "collationsets.h",
        "numparse_utils.h",
        "double-conversion-cached-powers.h",
        "selfmtimpl.h",
        "collationbuilder.h",
        "rbt_rule.h",
        "number_patternstring.h",
        "region_impl.h",
        "collationruleparser.h",
        "number_modifiers.h",
        "usrchimp.h",
        "inputext.h",
        "iso8601cal.h",
        "collationdatareader.h",
        "dt_impl.h",
        "number_patternmodifier.h",
        "messageformat2_serializer.h",
        "number_utils.h",
        "number_types.h",
        "strrepl.h",
        "currfmt.h",
        "brktrans.h",
        "collationroot.h",
        "rbt_set.h",
        "tolowtrn.h",
        "rbt_data.h",
        "numparse_types.h",
        "csrutf8.h",
        "numparse_compositions.h",
        "esctrn.h",
        "regextxt.h",
        "islamcal.h",
        "quantityformatter.h",
        "winnmfmt.h",
        "double-conversion.h",
        "bocsu.h",
        "coptccal.h",
        "number_usageprefs.h",
        "collationdatawriter.h",
        "smpdtfst.h",
        "number_roundingutils.h",
        "double-conversion-ieee.h",
        "vzone.h",
        "titletrn.h",
        "uni2name.h",
        "tznames_impl.h",
        "collunsafe.h",
        "funcrepl.h",
        "number_longnames.h",
        "csrmbcs.h",
        "string_segment.h",
        "collationiterator.h",
        "messageformat2_function_registry_internal.h",
        "standardplural.h",
        "csrsbcs.h",
        "double-conversion-utils.h",
        "regexst.h",
        "decContext.h",
        "double-conversion-string-to-double.h",
        "ethpccal.h",
        "nfrlist.h",
        "collation.h",
        "uspoof_impl.h",
        "number_currencysymbols.h",
        "umsg_imp.h",
        "ztrans.h",
        "dtitv_impl.h",
        "units_data.h",
        "collationsettings.h",
        "shareddateformatsymbols.h",
        "collationfcd.h",
        "nfsubs.h",
        "messageformat2_checker.h",
        "fphdlimp.h",
        "formatted_string_builder.h",
        "numparse_symbols.h",
        "messageformat2_allocation.h",
        "chnsecal.h",
        "anytrans.h",
        "tridpars.h",
        "utf16collationiterator.h",
        "number_decnum.h",
        "regexcst.h",
        "fmtableimp.h",
        "number_compact.h",
        "zonemeta.h",
        "cpdtrans.h",
        "ucol_imp.h",
        "messageformat2_errors.h",
        "cecal.h",
        "astro.h",
        "number_decimfmtprops.h",
        "quant.h",
        "csdetect.h",
        "dtptngen_impl.h",
        "taiwncal.h",
        "number_utypes.h",
        "collationfastlatin.h",
        "pluralranges.h",
        "hebrwcal.h",
        "indiancal.h",
        "sharedcalendar.h",
        "regeximp.h",
        "csr2022.h",
        "strmatch.h",
        "messageformat2_evaluation.h",
        "units_router.h",
        "sharednumberformat.h",
        "nfrule.h",
        "messageformat2_parser.h",
        "nfrs.h",
        "numparse_scientific.h",
        "zrule.h",
        "utf8collationiterator.h",
        "reldtfmt.h"
    ],
    includes = ["."],
    copts = [
        "-DU_I18N_IMPLEMENTATION",
    ],
    deps = [
        "//icu4c/source/common:common",
    ],
)
