load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "io",
    srcs = [
        "locbund.cpp",
        "sprintf.cpp",
        "sscanf.cpp",
        "ucln_io.cpp",
        "ufile.cpp",
        "ufmt_cmn.cpp",
        "uprintf.cpp",
        "uprntf_p.cpp",
        "uscanf.cpp",
        "uscanf_p.cpp",
        "ustdio.cpp",
        "ustream.cpp"
    ],
    hdrs = [
        "unicode/ustdio.h",
        "unicode/ustream.h",
        "ufile.h",
        "locbund.h",
        "uscanf.h",
        "uprintf.h",
        "ufmt_cmn.h",
        "ucln_io.h"
    ],
    includes = ["."],
    copts = [
        "-DU_IO_IMPLEMENTATION",
    ],
    deps = [
        "//icu4c/source/common:common",
        "//icu4c/source/i18n:i18n",
    ],
)
