load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "stubdata",
    srcs = [
        "stubdata.cpp"
    ],
    hdrs = [
        "stubdata.h"
    ],
    copts = [
        "-Iicu4c/source/common",
    ],
    deps = [
        "//icu4c/source/common:common_headers",
    ],
    linkstatic = 1,
)
