load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "iotest",
    srcs = glob([
        "*.c",
        "*.cpp",
        "*.h",
    ]),
    data = [
        "//icu4c/source/data:icudata_dat_file",
        "//icu4c/source/test/testdata:testdata_dat_file",
        "//icu4c/source/test/testdata:testdata_files",
    ],
    env = {
        "ICU_DATA": "icu4c/source/data",
    },
    local_defines = [
        'U_TOPBUILDDIR=\\"icu4c/source/\\"',
        'U_TOPSRCDIR=\\"icu4c/source/\\"',
    ],
    deps = [
        "//icu4c/source/common:icuuc",
        "//icu4c/source/i18n:icui18n",
        "//icu4c/source/io:icuio",
        "//icu4c/source/test/testdata",
        "//icu4c/source/tools/ctestfw",
        "//icu4c/source/tools/toolutil",
    ],
)
