load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "genrb",
    srcs = [
        "errmsg.c",
        "errmsg.h",
        "filterrb.cpp",
        "filterrb.h",
        "genrb.cpp",
        "genrb.h",
        "parse.cpp",
        "parse.h",
        "prscmnts.cpp",
        "prscmnts.h",
        "rbutil.c",
        "rbutil.h",
        "read.c",
        "read.h",
        "reslist.cpp",
        "reslist.h",
        "rle.c",
        "rle.h",
        "ustr.c",
        "ustr.h",
        "wrtjava.cpp",
        "wrtxml.cpp",
    ],
    visibility = ["//visibility:public"],
    deps = ["//icu4c/source/tools/toolutil:bootstrap"],
)
