# © 2021 and later: Unicode, Inc. and others.
# License & terms of use: http://www.unicode.org/copyright.html

# This Bazel build file defines a target representing the binary executable
# `genprops`, which is used for generating headers needed for bootstrapping
# the ICU4C build process in a way that integrates core Unicode properties data.

# Defining a binary executable (done in Bazel using `cc_binary`)
# enables the use of the output file from executing the binary as a part of
# other Bazel targets defined using `genrule`.

load("@rules_cc//cc:defs.bzl", "cc_binary")

package(
    default_visibility = ["//visibility:public"],
)

cc_binary(
    name = "genprops",
    srcs = glob([
        "*.cpp",
        "*.h",   # cannot have hdrs section in cc_binary
    ]),
    deps = [
        # Use bootstrap versions to avoid circular dependencies
        "//icu4c/source/common:icuuc_bootstrap",
        "//icu4c/source/tools/toolutil:bootstrap",
    ],
    linkopts = ["-pthread"],
)
