load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "ctestfw",
    srcs = [
        "ctest.c",
        "datamap.cpp",
        "testdata.cpp",
        "tstdtmod.cpp",
        "ucln_ct.c",
        "uperf.cpp"
    ],
    hdrs = [
        "unicode/tstdtmod.h",
        "unicode/ctest.h",
        "unicode/testlog.h",
        "unicode/datamap.h",
        "unicode/testtype.h",
        "unicode/uperf.h",
        "unicode/testdata.h",
        "unicode/utimer.h"
    ],
    includes = ["."],
    deps = [
        "//icu4c/source/common:common",
        "//icu4c/source/i18n:i18n",
        "//icu4c/source/tools/toolutil:toolutil",
    ],
)
