load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "toolutil",
    srcs = [
        "//:icu4c/source/tools/toolutil/collationinfo.cpp",
        "//:icu4c/source/tools/toolutil/dbgutil.cpp",
        "//:icu4c/source/tools/toolutil/denseranges.cpp",
        "//:icu4c/source/tools/toolutil/filestrm.cpp",
        "//:icu4c/source/tools/toolutil/filetools.cpp",
        "//:icu4c/source/tools/toolutil/flagparser.cpp",
        "//:icu4c/source/tools/toolutil/package.cpp",
        "//:icu4c/source/tools/toolutil/pkg_genc.cpp",
        "//:icu4c/source/tools/toolutil/pkg_gencmn.cpp",
        "//:icu4c/source/tools/toolutil/pkg_icu.cpp",
        "//:icu4c/source/tools/toolutil/pkgitems.cpp",
        "//:icu4c/source/tools/toolutil/ppucd.cpp",
        "//:icu4c/source/tools/toolutil/swapimpl.cpp",
        "//:icu4c/source/tools/toolutil/toolutil.cpp",
        "//:icu4c/source/tools/toolutil/ucbuf.cpp",
        "//:icu4c/source/tools/toolutil/ucln_tu.cpp",
        "//:icu4c/source/tools/toolutil/ucm.cpp",
        "//:icu4c/source/tools/toolutil/ucmstate.cpp",
        "//:icu4c/source/tools/toolutil/udbgutil.cpp",
        "//:icu4c/source/tools/toolutil/unewdata.cpp",
        "//:icu4c/source/tools/toolutil/uoptions.cpp",
        "//:icu4c/source/tools/toolutil/uparse.cpp",
        "//:icu4c/source/tools/toolutil/writesrc.cpp",
        "//:icu4c/source/tools/toolutil/xmlparser.cpp"
    ],
    hdrs = [
        "//:icu4c/source/tools/toolutil/json-json.hpp",
        "//:icu4c/source/tools/toolutil/ucm.h",
        "//:icu4c/source/tools/toolutil/pkg_genc.h",
        "//:icu4c/source/tools/toolutil/dbgutil.h",
        "//:icu4c/source/tools/toolutil/filetools.h",
        "//:icu4c/source/tools/toolutil/pkg_imp.h",
        "//:icu4c/source/tools/toolutil/pkg_gencmn.h",
        "//:icu4c/source/tools/toolutil/filestrm.h",
        "//:icu4c/source/tools/toolutil/unewdata.h",
        "//:icu4c/source/tools/toolutil/uparse.h",
        "//:icu4c/source/tools/toolutil/package.h",
        "//:icu4c/source/tools/toolutil/udbgutil.h",
        "//:icu4c/source/tools/toolutil/toolutil.h",
        "//:icu4c/source/tools/toolutil/xmlparser.h",
        "//:icu4c/source/tools/toolutil/ucbuf.h",
        "//:icu4c/source/tools/toolutil/ppucd.h",
        "//:icu4c/source/tools/toolutil/writesrc.h",
        "//:icu4c/source/tools/toolutil/ujson.h",
        "//:icu4c/source/tools/toolutil/denseranges.h",
        "//:icu4c/source/tools/toolutil/flagparser.h",
        "//:icu4c/source/tools/toolutil/swapimpl.h",
        "//:icu4c/source/tools/toolutil/uoptions.h",
        "//:icu4c/source/tools/toolutil/pkg_icu.h",
        "//:icu4c/source/tools/toolutil/collationinfo.h"
    ],
    copts = [
        "-DU_TOOLUTIL_IMPLEMENTATION",
        "-Iicu4c/source/common",
        "-Iicu4c/source/i18n",
        "-Iicu4c/source/tools/toolutil",
    ],
    deps = [
        "//bazel/icu4c/source/common:common",
        "//bazel/icu4c/source/i18n:i18n",
    ],
)
