load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "toolutil",
    srcs = [
        "collationinfo.cpp",
        "dbgutil.cpp",
        "denseranges.cpp",
        "filestrm.cpp",
        "filetools.cpp",
        "flagparser.cpp",
        "package.cpp",
        "pkg_genc.cpp",
        "pkg_gencmn.cpp",
        "pkg_icu.cpp",
        "pkgitems.cpp",
        "ppucd.cpp",
        "swapimpl.cpp",
        "toolutil.cpp",
        "ucbuf.cpp",
        "ucln_tu.cpp",
        "ucm.cpp",
        "ucmstate.cpp",
        "udbgutil.cpp",
        "unewdata.cpp",
        "uoptions.cpp",
        "uparse.cpp",
        "writesrc.cpp",
        "xmlparser.cpp"
    ],
    hdrs = [
        "json-json.hpp",
        "ucm.h",
        "pkg_genc.h",
        "dbgutil.h",
        "filetools.h",
        "pkg_imp.h",
        "pkg_gencmn.h",
        "filestrm.h",
        "unewdata.h",
        "uparse.h",
        "package.h",
        "udbgutil.h",
        "toolutil.h",
        "xmlparser.h",
        "ucbuf.h",
        "ppucd.h",
        "writesrc.h",
        "ujson.h",
        "denseranges.h",
        "flagparser.h",
        "swapimpl.h",
        "uoptions.h",
        "pkg_icu.h",
        "collationinfo.h"
    ],
    includes = ["."],
    copts = [
        "-DU_TOOLUTIL_IMPLEMENTATION",
    ],
    deps = [
        "//icu4c/source/common:common",
        "//icu4c/source/i18n:i18n",
    ],
)
